Minified banner image file size

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -25,7 +25,7 @@ body {
 }
 
 .banner {
-  background-image: url('../public/images/banner.jpg');
+  background-image: url('../public/images/banner.webp');
   background-size: 462%;
   background-repeat: no-repeat;
   background-position: top center;
